# typingspeed-terminal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  quotes.json  vcpkg.json
src/: AsciiArt.cpp  AsciiArt.h  Frame.cpp  Frame.h  Quotes.cpp  Quotes.h  Timer.cpp  Timer.h  TypeSpeed.cpp  TypeSpeed.h  TypingSpeedTerminal.cpp  TypingSpeedTerminal.h
